# client-python

./: .dockerignore  .editorconfig  .gitignore  .openapi-generator-ignore  .releaserc.json  Dockerfile  Makefile  README.md  SKILLS.md  conftest.py  devbox.json  lefthook.yml  main.py  nexus.json  proc.yml  pyproject.toml  qodana.yaml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: commitlint.yml  depcheck.yml  docker.yml  integration.yml  linting.yml  pipeline.yml  qodana.yml  release.yml  scorecard.yml  test.yml  typecheck.yml  unused.yml
.openapi-generator/: FILES
.qodana/: qodana.sarif.json
docs/source/: conf.py  index.rst
etc/: docker-compose.yaml
etc/zitadel_output/: pat.txt  sa-key.json
spec/: base_spec.py  check_session_service_spec.py  check_user_service_spec.py  conftest.py  sdk_test_to_sanity_check_the_session_service_spec.py  sdk_test_using_client_credentials_authentication_spec.py  sdk_test_using_personal_access_token_authentication_spec.py  sdk_test_using_web_token_authentication_spec.py
spec/auth/: using_access_token_spec.py  using_client_credentials_spec.py  using_private_key_spec.py
test/: test_add_organization_request_admin.py  test_add_organization_response_created_admin.py  test_api_client.py  test_api_exception.py  test_configuration.py  test_default_api_client.py  test_default_api_client_unit.py  test_feature_service_api.py  test_header_selector.py  test_identity_provider_service_api.py  test_object_serializer.py  test_objectv2_list_details.py  test_objectv2_list_query.py  test_oidc_service_api.py  test_oidc_service_create_callback_body.py  test_organization_service_api.py  test_otp_email_send_code.py  test_protobuf_any.py  test_request_challenges_otp_email.py  test_request_challenges_otpsms.py  test_rpc_status.py  test_session_service_api.py  test_session_service_delete_session_body.py  test_session_service_set_session_body.py  test_settings_api.py  test_settings_service_api.py  test_trace_context_util.py  test_transport_options.py  test_user_agent_header_values.py  test_user_service_add_idp_link_body.py  test_user_service_api.py  test_user_service_create_invite_code_body.py  test_user_service_create_passkey_registration_link_body.py  test_user_service_list_idp_links_body.py  test_user_service_password_reset_body.py  test_user_service_register_passkey_body.py  test_user_service_register_u2_f_body.py  test_user_service_resend_email_code_body.py  test_user_service_resend_phone_code_body.py  test_user_service_retrieve_identity_provider_intent_body.py  (+255 more)
test/auth/: test_client_credentials_authenticator.py  test_no_auth_authenticator.py  test_oauth_authenticator.py  test_personal_access_authenticator.py  test_web_token_authenticator.py
test/resources/: api.json  serde.json
zitadel_client/: __init__.py  _duration.py  api_client.py  api_response.py  api_result.py  client.py  configuration.py  default_api_client.py  exceptions.py  header_selector.py  i_api_client.py  object_serializer.py  rest.py  rest_response.py  server_configuration.py  servers.py  trace_context_util.py  transport_options.py  value_serializer.py  version.py  zitadel.py
zitadel_client/api/: __init__.py  action_service_api.py  api_client.py  api_response.py  application_service_api.py  authorization_service_api.py  base_api.py  beta_action_service_api.py  beta_app_service_api.py  beta_authorization_service_api.py  beta_feature_service_api.py  beta_instance_service_api.py  beta_internal_permission_service_api.py  beta_oidc_service_api.py  beta_organization_service_api.py  beta_project_service_api.py  beta_session_service_api.py  beta_settings_service_api.py  beta_telemetry_service_api.py  beta_user_service_api.py  beta_web_key_service_api.py  feature_service_api.py  identity_provider_service_api.py  instance_service_api.py  internal_permission_service_api.py  oidc_service_api.py  organization_service_api.py  project_service_api.py  rest.py  rest_response.py  saml_service_api.py  session_service_api.py  settings_api.py  settings_service_api.py  user_service_api.py  web_key_service_api.py
zitadel_client/auth/: __init__.py  authenticator.py  base_authenticator.py  bearer_authenticator.py  client_credentials.py  client_credentials_authenticator.py  http_aware_authenticator.py  jwt_auth.py  no_auth.py  no_auth_authenticator.py  oauth_authenticator.py  oauth_base.py  open_id.py  personal_access.py  personal_access_token_authenticator.py  web_token_authenticator.py  zitadel_access_token_authenticator.py
zitadel_client/errors/: __init__.py  bad_request_exception.py  client_exception.py  conflict_exception.py  forbidden_exception.py  internal_server_error_exception.py  not_found_exception.py  server_exception.py  unauthorized_exception.py  unprocessable_entity_exception.py
zitadel_client/models/: __init__.py  action_service_activate_public_key_request.py  action_service_activate_public_key_response.py  action_service_add_public_key_request.py  action_service_add_public_key_response.py  action_service_any.py  action_service_beta_condition.py  action_service_beta_create_target_response.py  action_service_beta_delete_target_response.py  action_service_beta_event_execution.py  action_service_beta_execution.py  action_service_beta_execution_target_type.py  action_service_beta_function_execution.py  action_service_beta_get_target_response.py  action_service_beta_in_target_ids_filter.py  action_service_beta_list_execution_functions_response.py  action_service_beta_list_execution_methods_response.py  action_service_beta_list_execution_services_response.py  action_service_beta_list_executions_response.py  action_service_beta_list_targets_response.py  action_service_beta_pagination_request.py  action_service_beta_pagination_response.py  action_service_beta_request_execution.py  action_service_beta_response_execution.py  action_service_beta_rest_call.py  action_service_beta_rest_webhook.py  action_service_beta_set_execution_response.py  action_service_beta_target.py  action_service_beta_target_field_name.py  action_service_beta_target_name_filter.py  action_service_condition.py  (+1913 more)
(+1 files in other folders)
