[project]
name = "zitadel_client"
description = "Official Zitadel SDK for Python. Authenticate and access Zitadel's authentication and management APIs in Python."
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9, !=3.9.0, !=3.9.1"
authors = [
  { name = "Mridang Agarwalla", email = "mridang@zitadel.com" }
]
keywords = ["sdk", "iam", "client-lib", "client-library", "sdk-python", "zitadel", "zitadel-sdk"]
classifiers = [
  "Topic :: Software Development :: Libraries"
]
dependencies = [
  "urllib3>=1.25.3,<3.0.0",
  "python-dateutil>=2.8.2",
  "pydantic>=2",
  "typing-extensions>=4.7.1",
  "authlib>=1.3.2,<2.0.0",
  "cryptography (>=44.0.1,<45.0.0)",
  "requests (>=2.32.4,<3.0.0)",
]

[project.urls]
homepage = "https://zitadel.com/"
repository = "https://github.com/zitadel/client-python"
documentation = "https://github.com/zitadel/client-python"
"Bug Tracker" = "https://github.com/zitadel/client-python/issues"

[tool.poetry]
include = ["zitadel_client/py.typed"]
version = "4.1.0b3"

[tool.poetry.group.dev.dependencies]
pytest = ">= 7.2.1"
pytest-cov = ">= 2.8.1"
tox = ">= 3.9.0"
types-python-dateutil = ">= 2.8.19.14"
mypy = ">= 1.5"
testcontainers = "3.7.1"
python-dotenv = "1.1.1"
ruff = "^0.12.4"
sphinx = "7.4.7"
fawltydeps = "0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
envlist = ["py39", "py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["test", "spec"]
python_files = "test_*.py *_spec.py"
addopts = [
  "--cov=zitadel_client",
  "--cov-report=html:build/coverage/html",
  "--cov-report=xml:build/coverage/clover.xml",
  "--cov-report=term",
]
junit_family = "legacy"

[tool.coverage.run]
data_file = "build/coverage/.coverage"
omit = [
  "zitadel_client/api/*",
  "zitadel_client/models/*"
]

[tool.mypy]
files = [
  "zitadel_client",
  "test",
  "spec"
]
exclude = '(^zitadel_client/models/|^zitadel_client/api/)'
strict = true
implicit_reexport = true

[[tool.mypy.overrides]]
module = [
  "authlib",
  "authlib.integrations.requests_client",
  "authlib.jose",
  "testcontainers.core.container",
  "testcontainers"
]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.ruff]
line-length = 130
fix = true
target-version = "py39"
exclude = [
  "zitadel_client/api/*",
  "zitadel_client/models/*"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C", "N", "Q", "S", "T"]
extend-select = ["A"]
ignore = ["S101"]  # Ignore assert statements

[tool.fawltydeps]
ignore_unused = [
  "fawltydeps",
  "mypy",
  "pytest-cov",
  "ruff",
  "sphinx",
  "tox",
  "requests"
]
