[project]
name = "zitadel-client"
version = "0.0.1"
description = "The Zitadel SDK is a convenience wrapper around the Zitadel APIs to assist you in integrating with your Zitadel environment. This SDK enables you to handle resources, settings, and configurations within the Zitadel platform."
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "urllib3>=2.1.0,<3.0.0",
    "python_dateutil>=2.8.2",
    "isodate>=0.6.1",
    "pydantic[email]>=2,<3",
    "typing-extensions>=4.7.1",
    "brotli>=1.0.0",
    "zstandard>=0.19.0",
    "PyJWT>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1,<3",
    "ruff>=0.15,<0.16",
    "types-python-dateutil>=2.8.0",
    "types-requests>=2.28.0",
    "types-urllib3>=1.26.0",
    "pytest-cov>=4.0.0",
    "sphinx>=7,<10",
    "furo>=2024.1.29",
    "cryptography>=46.0.6,<49.0.0",
    "testcontainers>=4.14.0,<5.0.0",
    "python-dotenv>=1.2.2",
    "fawltydeps>=0.20,<0.21",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["zitadel_client*"]

[tool.setuptools.package-data]
zitadel_client = ["py.typed"]

# Ruff, mypy and pyright run with their industry-default configuration; no
# custom or relaxed rules, line length or rule selection are declared here.
# Findings inherent to generated code are silenced per file via the
# `# ruff: noqa` and `# mypy: ignore-errors` headers emitted at the top of
# every generated module, never inline and never by relaxing the config.

[tool.fawltydeps]
# FawltyDeps maps imports to declared deps statically; the entries below are
# the cases that mapping cannot see, so they are declared here rather than
# silenced inline.
ignore_unused = [
    # Tooling and stub-only deps that are run/consumed, never imported.
    "fawltydeps",
    "mypy",
    "ruff",
    "pytest-cov",
    "pytest-asyncio",
    "sphinx",
    "furo",
    "types-python-dateutil",
    "types-requests",
    "types-urllib3",
    # Declared runtime deps used dynamically or behind optional shims, so no
    # static import is visible (isodate date parsing, brotli/zstandard codec
    # fallbacks selected at runtime).
    "isodate",
    "brotli",
    "zstandard",
]
ignore_undeclared = [
    # Pulled in by testcontainers for the integration suite (conftest.py).
    "docker",
    # Optional tracing integration imported behind a try/except shim.
    "opentelemetry",
]

[tool.pytest.ini_options]
cache_dir = ".pytest"
testpaths = ["test", "spec"]
python_files = "test_*.py *_spec.py"
asyncio_mode = "auto"
addopts = "--cov=zitadel_client --cov-report=xml:.out/coverage.xml --cov-report=term-missing --junitxml=.out/reports/junit.xml"
